<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/blanc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Contenu principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo_imageview"
                android:layout_width="217dp"
                android:layout_height="88dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_nexus" />

            <!-- Bienvenue Text -->
            <TextView
                android:id="@+id/bienvenue_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/bienvenue_text"
                android:textColor="#000080"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/apropos_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/apropos_button"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Espaceur pour équilibrer l'espace entre le bouton A Propos de nous et l'image -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Image entre les boutons -->
        <ImageView
            android:id="@+id/glasses_imageview"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/glasses" />

        <!-- Espaceur pour équilibrer l'espace entre l'image et le bouton Se connecter -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Bouton Se connecter -->
        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/connect_button" />

    </LinearLayout>

</RelativeLayout>
